# rustle

./: .gitignore  Cargo.toml  README.md
src/: control.rs  lib.rs  main.rs  model.rs  view.rs
